# myglot

./: .dockerignore  .env.example  .gitignore  README.md  SPEC.md  Taskfile.yml  docker-compose.yml
.github/: copilot-instructions.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  db.py  errors.py  main.py  migrate.py  models.py  scheduler.py  schemas.py
backend/app/migrations/: 001_add_sort_order.py  002_add_backup_schedule.py  003_add_item_explanation.py  004_add_note_table.py  __init__.py
backend/app/providers/: base.py  registry.py
backend/app/providers/fake/: stt.py  translate.py  tts.py
backend/app/providers/google/: stt.py  translate.py  tts.py
backend/app/providers/ollama/: translate.py
backend/app/routes/: categories.py  health.py  items.py  notes.py  settings.py  voices.py
backend/app/services/: audio_store.py  similarity.py
docs/: GOOGLE_CLOUD_SETUP.md  OLLAMA_SETUP.md
frontend/: biome.json  index.html  package-lock.json  package.json  styles.css
frontend/js/: api.js  app.js  home.js  notes.js  practice.js  recorder.js  settings.js  util.js
