[project]
name = "myglot"
version = "0.1.0"
description = "Personal language learning app"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-translate>=3.15",
    "google-cloud-texttospeech>=2.16",
    "google-cloud-speech>=2.26",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.19",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
